Terraform_Source/On-Premise/07.rt.tf
resource "aws_route_table" "ON-PREMISE-RT-PUB" {
  vpc_id = aws_vpc.ON-PREMISE-VPC.id
  tags = {
    "Name" = "ON-PREMISE-RT-PUB"
  }

}

resource "aws_route_table" "ON-PREMISE-RT-PRI-01" {
  vpc_id = aws_vpc.ON-PREMISE-VPC.id
  tags = {
    "Name" = "ON-PREMISE-RT-PRI-01"
  }
}
